fix: tabpane overflow

--- a/apps/hotel/resources/views/show/show.scss
+++ b/apps/hotel/resources/views/show/show.scss
@@ -183,3 +183,7 @@ div.accordion-list section:last-child li:last-child {
     margin-right: 0.313rem;
   }
 }
+
+.tab-content .tab-pane {
+  overflow: auto;
+}
